# atl4s-monorepo

./: .dockerignore  .env.example  .gitignore  HANDOFF.md  README.md  docker-compose.yml
console/: README.md  requirements.txt
console/api/: auth.py  config.py  containers.py  crackseg.py  deployments.py  inspector.py  main.py  pipelines.py
console/config/: deployments.yaml  pipelines.yaml
console/deploy/: atl4s-console.service.template
console/scripts/: build-ui.sh  install-service.sh  run.sh  setup.sh
console/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: architecture.md  deployment.md  ros-topics.md
scripts/: bag-list.sh  bag-record.sh  dev-up.sh  prod-up.sh  publish-fake-lidar.sh  publish-fake-scan.sh  topic-check.sh
services/bag-record/: Dockerfile  README.md  entrypoint.sh
services/bag-uploader/: Dockerfile  README.md  bag_uploader.py
services/bag-web/: Dockerfile  README.md  bag_web.py  entrypoint.sh
services/commander/: Dockerfile  README.md  commander_node.py  entrypoint.sh
services/crackseg/: Dockerfile  README.md  entrypoint.sh
services/dashboard/: Dockerfile  README.md  entrypoint.sh
services/foxglove/: Dockerfile  README.md  entrypoint.sh  params.yaml
services/gazebo/: Dockerfile  README.md  entrypoint.sh
services/gz-bridge/: Dockerfile  README.md  bridge.yaml  entrypoint.sh
services/healthcheck/: Dockerfile  README.md  entrypoint.sh  (+1 more)
shared/: fastdds_profiles.xml
shared/atl4s_msgs/: CMakeLists.txt  package.xml
shared/atl4s_msgs/msg/: LidarDetection.msg  LidarDetectionArray.msg
(+155 files in other folders)
