<?xml version="1.0"?>
<package format="3">
  <name>atl4s_msgs</name>
  <version>0.1.0</version>
  <description>Custom ATL4S message types for perception, fusion, and events. First user: services/perception-lidar.</description>
  <maintainer email="philosopriyan@gmail.com">ATL4S</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
